# Pet-Health-Hub

./: LICENSE-MIT  README.md  pom.xml
esp/esp01/: Cargo.toml  alias.ld  build.rs  linker.ld  memory.ld  openocd.cfg  openocd.gdb
esp/esp01/.cargo/: config
esp/esp01/ld/: linker.ld  memory.ld  ram.ld
esp/esp01/src/: lib.rs  main.rs
esp/esp32/: Cargo.toml
esp/esp32/.cargo/: config.toml
esp/esp32/src/: lib.rs  main.rs
esp/phh-esp-panic/: Cargo.toml
esp/phh-esp-panic/src/: lib.rs
src/main/java/com/PetHealthHub/: PetHealthHubApplication.java
src/main/java/com/PetHealthHub/configuration/: SpringSecurity.java
src/main/java/com/PetHealthHub/controllers/: AuthController.java  SessionController.java
src/main/java/com/PetHealthHub/security/: CustomUserDetailsService.java
src/main/java/com/PetHealthHub/user/: User.java  UserDto.java  UserRepository.java
src/main/java/com/PetHealthHub/user/services/: UserService.java
src/main/java/com/PetHealthHub/user/services/implementation/: UserServiceImpl.java
src/main/java/user/: User.java  UserDto.java  UserRepository.java
src/main/java/user/services/: UserService.java
src/main/java/user/services/implementation/: UserServiceImpl.java
src/main/resources/: application.properties
src/main/resources/static/: style.css
src/main/resources/static/scripts/: register.js
src/main/resources/templates/: login.html  mainPage.html  registration.html  welcome.html
src/test/java/com/PetHealthHub/: PetHealthHubApplicationTests.java
