[package]
name = "phh-firmware-esp32"
version = "0.1.0"
authors = ["Notforest <notforest69@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32-hal = "0.18.0"
smoltcp =       { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
esp-backtrace = { version = "0.11.0", features = ["esp32", "panic-handler", "exception-handler", "println"] }
esp-wifi  =     { version = "0.3.0", features = ["esp32", "wifi"] }

esp-println =   { version = "0.9.0", features = ["esp32", "log"] }
log =           { version = "0.4.20" }
embedded-io = "0.6.1"

[features]
default = ["esp32-hal/xtal-40mhz"]

